--- a/web/index.html
+++ b/web/index.html
@@ -15,14 +15,10 @@
 
         </div>
     </div>
-    <div class="AOAsystem bar" id="AOA_div">
-        <div>
+    <div class = "bar" id = "digital_data">
+        <div class="bar" id="AOA_div">
             <img src="./imgs/speed.png" alt="speed picture" class="AOAsystem" id="speed" />
-        </div>
-        <div id="roll_div">
             <img src="./imgs/AOA1.png" alt="roll picture" class="AOAsystem" id="roll" />
-        </div>
-        <div>
             <img src="./imgs/depression.png" alt="depression picture" class="AOAsystem" id="depression" />
         </div>
     </div>
