--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -28,5 +28,20 @@
         });
     });
   </script>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="test.css" rel="stylesheet" type="text/css" />
+</head>
+<body style="background-color: black;">
+
+  <button class="boton-elegante">Explore</button>
+
 </body>
 </html>
