--- a/test.html
+++ b/test.html
@@ -1,47 +1,23 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Fetch Example</title>
+<title>彈出視窗</title>
+<link rel="stylesheet" type="text/css" href="test.css">
 </head>
 <body>
-  <button id="send_request_btn">Send Request</button>
 
-  <script>
-    const sendRequestBtn = document.getElementById('send_request_btn');
+<button id="myBtn">打開彈出視窗</button>
 
-    // 当按钮被点击时触发
-    sendRequestBtn.addEventListener('click', () => {
-      // 向 http://192.168.0.106/ 发送 GET 请求，使用 CORS 模式
-      fetch('http://192.168.0.106/', {
-        mode: 'no-cors'
-      })
-        .then(response => {
-          if (!response.ok) {
-            throw new Error('Failed to fetch data');
-          }
-          console.log('Response from server:', response);
-        })
-        .catch(error => {
-          console.error('Error fetching data:', error);
-        });
-    });
-  </script>
-</body>
-</html> -->
+<div id="myModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>這是一個彈出視窗的範例。</p>
+  </div>
+</div>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href="test.css" rel="stylesheet" type="text/css" />
-</head>
-<body style="background-color: black;">
-
-  <button class="boton-elegante">Explore</button>
+<script src="test.js"></script>
 
 </body>
 </html>
