彈出式視窗
網路上抓了一個彈出式視窗的範例
但是還沒有放上去，有稍微做了一點但是失敗了

--- a/test.html
+++ b/test.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>彈出視窗</title>
-<link rel="stylesheet" type="text/css" href="test.css">
+  <link rel="stylesheet" type="text/css" href="test.css">
 </head>
 <body>
 
-<button id="myBtn">打開彈出視窗</button>
+<!-- 這是觸發彈出視窗的按鈕 -->
+<button id="record">記錄</button>
 
-<div id="myModal" class="modal">
+<!-- 這是彈出視窗的內容 -->
+<div id="record_page" class="modal">
   <div class="modal-content">
-    <span class="close">&times;</span>
-    <p>這是一個彈出視窗的範例。</p>
+    <span class="close">×</span>
+    <p>這是記錄頁面的彈出視窗！</p>
   </div>
 </div>
 
 <script src="test.js"></script>
-
 </body>
 </html>
